OOBE: Take in account docked magnifier height for the UI.

Also removed ShellObserver from LockLayoutManager

Bug: 833348
Change-Id: Ic4e899145eb7751ff5c089193e7733017383ff03
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1855939
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Denis Kuznetsov <antrim@chromium.org>
Commit-Queue: Roman Sorokin [CET] <rsorokin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#705265}