ash/wm/lock_layout_manager.cc
@@ -6,7 +6,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ash/wm/lock_layout_manager.h"
 
 #include "ash/keyboard/ui/keyboard_ui_controller.h"
-#include "ash/shell.h"
 #include "ash/wm/lock_window_state.h"
 #include "ash/wm/window_state.h"
 #include "ash/wm/wm_event.h"
@@ -20,7 +19,6 @@ LockLayoutManager::LockLayoutManager(aura::Window* window, Shelf* shelf)
     : WmDefaultLayoutManager(),
       window_(window),
       root_window_(window->GetRootWindow()) {
-  Shell::Get()->AddShellObserver(this);
   root_window_->AddObserver(this);
   keyboard::KeyboardUIController::Get()->AddObserver(this);
   shelf_observer_.Add(shelf);
@@ -35,7 +33,6 @@ LockLayoutManager::~LockLayoutManager() {
   for (aura::Window* child : window_->children())
     child->RemoveObserver(this);
 
-  Shell::Get()->RemoveShellObserver(this);
 }
 
 void LockLayoutManager::OnWindowResized() {
