ash/wm/lock_layout_manager.h
@@ -11,7 +11,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ash/public/cpp/keyboard/keyboard_controller_observer.h"
 #include "ash/shelf/shelf.h"
 #include "ash/shelf/shelf_observer.h"
-#include "ash/shell_observer.h"
 #include "ash/wm/wm_default_layout_manager.h"
 #include "base/macros.h"
 #include "base/scoped_observer.h"
@@ -36,7 +35,6 @@ class WMEvent;
 // with LockWindowState.
 class ASH_EXPORT LockLayoutManager : public WmDefaultLayoutManager,
                                      public aura::WindowObserver,
-                                     public ShellObserver,
                                      public ShelfObserver,
                                      public KeyboardControllerObserver {
  public:
